# faiss

./: .gitignore  CMakeLists.txt  README.md  cmake-variants.sample.yaml  vcpkg.json
benchmark/: CMakeLists.txt
benchmark/include/: dataset.h  file_io.h  logging.h  stopwatch.h  util.h
benchmark/src/: benchmark_main.cpp  faiss_benchmark.cpp  faiss_build_and_test.cpp  faiss_fastscan_index.cpp  faiss_flat_index.cpp  faiss_flat_index_compute_gt.cpp  faiss_index.cpp  faiss_ivfpq_index.cpp
example_lib/: CMakeLists.txt
example_lib/include/: example_lib.h
